--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-loader-spinner": "^5.1.5",
     "react-multi-carousel": "^2.8.2",
     "react-player": "^2.10.1",
+    "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
