--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/recharts": "^1.8.23",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "react": "^18.1.0",
@@ -28,6 +29,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "typescript": "^4.7.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
